// ============================================================
// Project Downforce - Database Schema
// AI 기반 복약 관리 시스템
// PostgreSQL 15+
// Updated: 2026-04-21
// ============================================================

Project downforce {
  database_type: 'PostgreSQL'
  Note: '''
  AI 복약 관리 시스템 - 14개 테이블

  PK 전략:
  - 비즈니스 엔티티: UUID (보안, 외부 노출 시 예측 불가)
  - 내부/캐시 테이블: BigInt (성능 최적화)

  Soft Delete:
  - 비즈니스 엔티티: deleted_at 적용
  - 캐시/로그: 미적용 (TTL 또는 보존)
  '''
}

// ============================================================
// CORE - 계정 및 프로필
// ============================================================

Table accounts {
  id uuid [pk, default: `gen_random_uuid()`, note: '계정 고유 식별자']
  auth_provider varchar(16) [not null, note: '소셜 인증 제공자 (KAKAO, NAVER)']
  provider_account_id varchar(128) [not null, note: '소셜 제공자가 부여한 사용자 고유 ID']
  email varchar(255) [null, note: '이메일 주소 (소셜에서 제공 시)']
  nickname varchar(32) [not null, note: '서비스 내 표시 이름']
  is_active boolean [not null, default: true, note: '계정 활성 상태 (탈퇴 시 false)']
  created_at timestamptz [not null, default: `now()`, note: '계정 생성 일시']
  updated_at timestamptz [not null, default: `now()`, note: '계정 정보 수정 일시']
  deleted_at timestamptz [null, note: '계정 삭제 일시 (soft delete)']

  indexes {
    (auth_provider, provider_account_id) [unique, name: 'uq_accounts_provider', note: '동일 소셜 계정 중복 가입 방지']
  }

  Note: '''
  로그인 계정 테이블
  - 소셜 로그인(OAuth2) 인증 정보 저장
  - 하나의 계정이 여러 프로필(본인+피보호자) 관리
  '''
}

Table profiles {
  id uuid [pk, default: `gen_random_uuid()`, note: '프로필 고유 식별자']
  account_id uuid [not null, ref: > accounts.id, note: '소유 계정 ID']
  relation_type varchar(16) [not null, note: '계정 소유자와의 관계 (SELF, PARENT, CHILD, SPOUSE, OTHER)']
  name varchar(32) [not null, note: '프로필 이름 (실명 또는 별칭)']
  health_survey jsonb [null, note: '건강 설문 데이터 (선택 입력)']
  created_at timestamptz [not null, default: `now()`, note: '프로필 생성 일시']
  updated_at timestamptz [not null, default: `now()`, note: '프로필 수정 일시']
  deleted_at timestamptz [null, note: '프로필 삭제 일시 (soft delete)']

  indexes {
    account_id [name: 'ix_profiles_account', note: '계정별 프로필 목록 조회']
  }

  Note: '''
  건강 프로필 테이블
  - SELF: 본인 프로필 (계정당 1개)
  - 그 외: 피보호자 프로필 (부모, 자녀, 배우자 등)

  health_survey 구조:
  {
    "birth_year": 1990,
    "gender": "MALE | FEMALE",
    "height_cm": 175,
    "weight_kg": 70,
    "is_smoking": false,
    "is_drinking": true,
    "exercise_freq": "NONE | LIGHT | MODERATE | ACTIVE",
    "conditions": ["고혈압", "당뇨"],
    "allergies": ["페니실린", "아스피린"]
  }
  '''
}

// ============================================================
// MEDICATION - 복약 관리
// ============================================================

Table medications {
  id uuid [pk, default: `gen_random_uuid()`, note: '약품 고유 식별자']
  profile_id uuid [not null, ref: > profiles.id, note: '복용자 프로필 ID']
  medicine_name varchar(128) [not null, note: '약품명 (OCR 추출 또는 직접 입력)']
  department varchar(64) [null, note: '처방 진료과 (예: 내과, 정형외과)']
  category varchar(64) [null, note: '약품 분류 (예: 해열진통제, 항생제)']
  dose_per_intake varchar(32) [null, note: '1회 복용량 (예: 1정, 5ml, 2포)']
  daily_intake_count int [null, note: '1일 복용 횟수 (예: 3)']
  total_intake_days int [null, note: '총 복용 일수 (예: 5)']
  intake_instruction varchar(256) [null, note: '복용 지시사항 (예: 식후 30분, 취침 전)']
  intake_times jsonb [not null, note: '일일 복용 시간 목록']
  total_intake_count int [not null, note: '처방된 총 복용 횟수']
  remaining_intake_count int [not null, note: '남은 복용 횟수 (0이면 복용 완료)']
  start_date date [not null, note: '복용 시작일']
  end_date date [null, note: '복용 종료 예정일 (누락 시 자동 연장)']
  dispensed_date date [null, note: '약품 조제일']
  expiration_date date [null, note: '약품 유효기간 만료일']
  is_active boolean [not null, default: true, note: '현재 복용 중 여부']
  created_at timestamptz [not null, default: `now()`, note: '등록 일시']
  updated_at timestamptz [not null, default: `now()`, note: '수정 일시']
  deleted_at timestamptz [null, note: '삭제 일시 (soft delete)']

  indexes {
    (profile_id, is_active) [name: 'ix_medications_profile_active', note: '프로필별 활성 약품 조회']
  }

  Note: '''
  복용 약품 테이블
  - 처방전 OCR 또는 수동 입력으로 등록
  - remaining_intake_count = 0 되면 is_active = false

  intake_times 구조:
  ["08:00", "13:00", "19:00"]
  '''
}

Table intake_logs {
  id uuid [pk, default: `gen_random_uuid()`, note: '복용 기록 고유 식별자']
  medication_id uuid [not null, ref: > medications.id, note: '대상 약품 ID']
  profile_id uuid [not null, ref: > profiles.id, note: '복용자 프로필 ID (조회 최적화용 비정규화)']
  scheduled_date date [not null, note: '복용 예정 날짜']
  scheduled_time time [not null, note: '복용 예정 시간']
  intake_status varchar(16) [not null, default: 'SCHEDULED', note: '복용 상태 (SCHEDULED, COMPLETED, MISSED)']
  taken_at timestamptz [null, note: '실제 복용 완료 시간']
  created_at timestamptz [not null, default: `now()`, note: '기록 생성 일시']
  updated_at timestamptz [not null, default: `now()`, note: '기록 수정 일시']

  indexes {
    (profile_id, scheduled_date) [name: 'ix_intake_logs_profile_date', note: '프로필별 일자 복용 일정 조회']
    (scheduled_date, intake_status) [name: 'ix_intake_logs_date_status', note: '일자별 상태 조회 (알림 배치용)']
    medication_id [name: 'ix_intake_logs_medication', note: '약품별 복용 기록 조회']
  }

  Note: '''
  복용 기록 테이블
  - 약품 등록 시 당일 로그 자동 생성
  - 이전 복용 기록은 사용자 선택에 따라 소급 입력 가능

  intake_status:
  - SCHEDULED: 복용 예정
  - COMPLETED: 복용 완료
  - MISSED: 복용 누락
  '''
}

// ============================================================
// FEATURES - 챌린지, 채팅
// ============================================================

Table challenges {
  id uuid [pk, default: `gen_random_uuid()`, note: '챌린지 고유 식별자']
  profile_id uuid [not null, ref: > profiles.id, note: '참여자 프로필 ID']
  title varchar(64) [not null, note: '챌린지 제목']
  description varchar(256) [null, note: '챌린지 상세 설명']
  target_days int [not null, note: '목표 달성 일수']
  completed_dates jsonb [not null, default: '[]', note: '달성 완료 날짜 목록']
  difficulty varchar(16) [null, note: '난이도 (쉬움/보통/어려움)']
  challenge_status varchar(16) [not null, default: 'IN_PROGRESS', note: '진행 상태']
  started_date date [not null, note: '챌린지 시작 날짜']
  created_at timestamptz [not null, default: `now()`, note: '생성 일시']
  updated_at timestamptz [not null, default: `now()`, note: '수정 일시']
  deleted_at timestamptz [null, note: '삭제 일시 (soft delete)']

  indexes {
    (profile_id, challenge_status) [name: 'ix_challenges_profile_status', note: '프로필별 상태 조회']
  }

  Note: '''
  건강 챌린지 테이블
  - 복용 완료와 연계하여 동기부여 제공

  challenge_status:
  - IN_PROGRESS: 진행 중
  - SUCCEEDED: 목표 달성 완료
  - FAILED: 목표 미달성 종료
  - AWAITING_REVIEW: 기간 종료, 사용자 확인 대기

  completed_dates 구조:
  ["2024-03-15", "2024-03-16", "2024-03-18"]
  '''
}

Table chat_sessions {
  id uuid [pk, default: `gen_random_uuid()`, note: '채팅 세션 고유 식별자']
  account_id uuid [not null, ref: > accounts.id, note: '세션 소유 계정 ID']
  profile_id uuid [not null, ref: > profiles.id, note: '상담 대상 프로필 ID (필수)']
  title varchar(64) [null, note: '세션 제목 (첫 질문 기반 자동 생성)']
  created_at timestamptz [not null, default: `now()`, note: '세션 생성 일시']
  updated_at timestamptz [not null, default: `now()`, note: '세션 수정 일시']
  deleted_at timestamptz [null, note: '세션 삭제 일시 (soft delete)']

  indexes {
    (account_id, created_at) [name: 'ix_chat_sessions_account_created', note: '계정별 최신 세션 조회']
    profile_id [name: 'ix_chat_sessions_profile', note: '프로필별 세션 조회']
  }

  Note: '''
  AI 상담 세션 테이블
  - 하나의 세션은 하나의 프로필에 대한 상담
  - 프로필 전환 시 새 세션 생성 (의료 데이터 혼동 방지)
  - UI에서 현재 상담 대상 프로필 명시 표시
  '''
}

Table messages {
  id uuid [pk, default: `gen_random_uuid()`, note: '메시지 고유 식별자']
  session_id uuid [not null, ref: > chat_sessions.id, note: '소속 세션 ID']
  sender_type varchar(16) [not null, note: '발신자 유형 (USER, ASSISTANT)']
  content text [not null, note: '메시지 본문']
  created_at timestamptz [not null, default: `now()`, note: '메시지 생성 일시']
  deleted_at timestamptz [null, note: '메시지 삭제 일시 (민감정보 삭제용)']

  indexes {
    (session_id, created_at) [name: 'ix_messages_session_created', note: '세션별 시간순 메시지 조회']
  }

  Note: '''
  채팅 메시지 테이블
  - 사용자(USER)와 AI(ASSISTANT) 메시지 저장
  - 민감정보 포함 메시지 개별 삭제 지원
  '''
}

// ============================================================
// AUTH - 인증 토큰
// ============================================================

Table refresh_tokens {
  id bigint [pk, increment, note: '토큰 레코드 ID (내부용)']
  account_id uuid [not null, ref: > accounts.id, note: '토큰 소유 계정 ID']
  token_hash varchar(64) [not null, note: 'Refresh Token SHA-256 해시값']
  expires_at timestamptz [not null, note: '토큰 만료 일시']
  is_revoked boolean [not null, default: false, note: '토큰 무효화 여부 (로그아웃 시 true)']
  created_at timestamptz [not null, default: `now()`, note: '토큰 발급 일시']

  indexes {
    token_hash [name: 'ix_refresh_tokens_hash', note: '토큰 해시 검색']
    (account_id, is_revoked) [name: 'ix_refresh_tokens_account_active', note: '계정별 유효 토큰 조회']
  }

  Note: '''
  Refresh Token 관리 테이블
  - 토큰 원본이 아닌 SHA-256 해시값 저장 (보안)
  - 로그아웃 시 is_revoked = true로 즉시 무효화
  - 다중 기기 로그인 지원 (계정당 여러 토큰)
  '''
}

// ============================================================
// DATA - 약품 정보 지식 베이스
// ============================================================

Table medicine_info {
  id int [pk, increment, note: '약품 정보 레코드 ID']
  item_seq varchar(20) [unique, null, note: '품목기준코드 (공공API UPSERT 키)']
  medicine_name varchar(200) [unique, not null, note: '약품명 (한글)']
  item_eng_name varchar(256) [null, note: '약품 영문명']
  entp_name varchar(128) [null, note: '제조업체명']
  product_type varchar(64) [null, note: '제품 유형 분류 코드']
  spclty_pblc varchar(32) [null, note: '전문/일반의약품 구분']
  permit_date varchar(8) [null, note: '허가일자 (YYYYMMDD)']
  cancel_name varchar(16) [null, note: '상태 (정상/취소)']
  main_item_ingr text [null, note: '유효성분 (표준코드 포함)']
  storage_method text [null, note: '저장 방법']
  edi_code varchar(256) [null, note: '보험코드 (쉼표 구분)']
  bizrno varchar(16) [null, note: '사업자등록번호']
  change_date varchar(8) [null, note: 'API 마지막 변경일자 (YYYYMMDD)']
  category varchar(64) [null, note: '약품 분류 (검색 필터용)']
  efficacy text [null, note: '효능/효과']
  side_effects text [null, note: '부작용']
  precautions text [null, note: '주의사항']
  chart text [null, note: '성상 (색/형태) - API CHART']
  material_name text [null, note: '총량/분량 원본 문자열 - API MATERIAL_NAME']
  valid_term varchar(64) [null, note: '유효기간 - API VALID_TERM']
  pack_unit varchar(256) [null, note: '포장단위 - API PACK_UNIT']
  atc_code varchar(32) [null, note: 'WHO ATC 분류 코드 - API ATC_CODE']
  ee_doc_url varchar(256) [null, note: '효능효과 PDF 원본 URL - API EE_DOC_ID']
  ud_doc_url varchar(256) [null, note: '용법용량 PDF 원본 URL - API UD_DOC_ID']
  nb_doc_url varchar(256) [null, note: '사용상주의사항 PDF 원본 URL - API NB_DOC_ID']
  last_synced_at timestamptz [null, note: '마지막 공공API 동기화 시각']
  created_at timestamptz [not null, default: `now()`, note: '생성 일시']
  updated_at timestamptz [not null, default: `now()`, note: '수정 일시']

  indexes {
    item_seq [unique, name: 'uq_medicine_info_item_seq', note: '품목기준코드 유니크']
    medicine_name [unique, name: 'uq_medicine_info_name', note: '약품명 유니크']
  }

  Note: '''
  약품 정보 지식 베이스 테이블
  - 식약처 공공데이터 API (DrugPrdtPrmsnInfoService07)에서 수집
  - 월 1회 증분 업데이트 (start_change_date 기반)
  - item_seq 기준 UPSERT로 데이터 동기화
  - 벡터 임베딩은 medicine_chunk 테이블로 분리 (섹션별 1:N 청크)
  - 주성분 1:N 상세는 medicine_ingredient 테이블로 분리
  '''
}

Table medicine_chunk {
  id bigint [pk, increment, note: '청크 레코드 ID']
  medicine_info_id int [not null, ref: > medicine_info.id, note: '부모 약품 FK (ON DELETE CASCADE)']
  section varchar(48) [not null, note: '청크 섹션 타입 (v2 수요자 중심 enum 6종: overview | intake_guide | drug_interaction | lifestyle_interaction | adverse_reaction | special_event)']
  chunk_index int [not null, default: 0, note: 'ARTICLE 128토큰 초과 분할 시 순번']
  content text [not null, note: '헤더 프리픽스 포함 최종 임베딩 대상 문자열']
  token_count int [null, note: '토큰 수 (모니터링용)']
  embedding text [null, note: 'pgvector VECTOR(768) - Aerich migration 수동 SQL로 실제 타입은 vector(768)']
  model_version varchar(64) [not null, note: '임베딩 모델 버전 (재임베딩 트리거, 예: ko-sroberta-multitask-v1)']
  interaction_tags text [not null, default: `'[]'::jsonb`, note: 'JSONB 배열 - 세분화 필터 태그 (예: ["alcohol", "condition:liver"]). 실제 타입은 jsonb, GIN 인덱스 적용']
  created_at timestamptz [not null, default: `now()`, note: '생성 일시']
  updated_at timestamptz [not null, default: `now()`, note: '수정 일시']

  indexes {
    (medicine_info_id, section, chunk_index) [unique, name: 'uq_medicine_chunk_section', note: '약품+섹션+순번 유니크']
    medicine_info_id [name: 'idx_medicine_chunk_parent']
    section [name: 'idx_medicine_chunk_section']
    model_version [name: 'idx_medicine_chunk_model_version']
  }

  Note: '''
  약품 섹션별 임베딩 청크 (RAG 벡터 검색 대상, v2 수요자 중심 재설계)
  - 임베딩 모델: jhgan/ko-sroberta-multitask (768차원)
  - section enum 6종 (사용자 질문 유형 기반):
    * overview              : 약의 정체성/효능 ("이 약 뭐야?")
    * intake_guide          : 복용법/타이밍/제형 ("공복?", "까먹었어")
    * drug_interaction      : 약-약, 약-영양제/한약 ("홍삼이랑?")
    * lifestyle_interaction : 음식/음주/카페인/운전/운동 ("커피?", "술?")
    * adverse_reaction      : 부작용/이상반응/과량 ("두드러기?", "토했어")
    * special_event         : 수술/시술/임신/수유/보관 ("레이저?", "임신 중")
  - interaction_tags JSONB: 세분화 필터 태그 (GIN 인덱스 적용)
    * prefix: food/beverage/drug/procedure/condition/activity/exposure/timing/demographic/emergency
    * 시드 사전: ai_worker/data/interaction_tags.json
    * 쿼리 예: WHERE interaction_tags @> ''["alcohol"]''
  - pgvector HNSW 인덱스: USING hnsw (embedding vector_cosine_ops) WITH (m=16, ef_construction=64)
  - GIN 인덱스 (Aerich migration 9번에서 생성):
      CREATE INDEX idx_medicine_chunk_tags_gin
        ON medicine_chunk USING gin (interaction_tags jsonb_path_ops)
  - 청킹 단위: PARAGRAPH (v1 ARTICLE에서 세분화)
  - 증분 재임베딩: model_version 불일치 또는 medicine_info.change_date 변경 시
  '''
}

Table medicine_ingredient {
  id bigint [pk, increment, note: '주성분 레코드 ID']
  medicine_info_id int [not null, ref: > medicine_info.id, note: '부모 약품 FK (ON DELETE CASCADE)']
  mtral_sn int [not null, note: '주성분 순번 - API MTRAL_SN']
  mtral_code varchar(16) [null, note: '성분 코드 (M040702 등) - API MTRAL_CODE']
  mtral_name varchar(128) [not null, note: '성분명 (포도당 등) - API MTRAL_NM']
  main_ingr_eng varchar(256) [null, note: '영문 성분명 (Glucose 등) - API MAIN_INGR_ENG']
  quantity varchar(32) [null, note: '분량 - API QNT']
  unit varchar(16) [null, note: '단위 (그램, 밀리그램 등) - API INGD_UNIT_CD']
  created_at timestamptz [not null, default: `now()`, note: '생성 일시']

  indexes {
    (medicine_info_id, mtral_sn) [unique, name: 'uq_medicine_ingredient_sn', note: '약품+성분순번 유니크']
    mtral_name [name: 'idx_medicine_ingredient_name']
    mtral_code [name: 'idx_medicine_ingredient_code']
  }

  Note: '''
  약품 주성분 1:N 상세 (공공데이터 주성분 상세정보 API)
  - 약품 1개 = 주성분 N개 구조 (예: 포도당생리식염액 → 포도당 + 염화나트륨)
  - UPSERT 키: (medicine_info_id, mtral_sn)
  - 성분명 기반 검색/조회 시 mtral_name 인덱스 활용
  '''
}

Table data_sync_log {
  id bigint [pk, increment, note: '동기화 로그 ID']
  sync_type varchar(32) [not null, note: '동기화 대상 (medicine_info)']
  sync_date timestamptz [not null, note: '동기화 실행 시각']
  total_fetched int [not null, default: 0, note: 'API에서 수집한 총 건수']
  total_inserted int [not null, default: 0, note: '신규 삽입 건수']
  total_updated int [not null, default: 0, note: '업데이트 건수']
  status varchar(16) [not null, note: '결과 상태 (SUCCESS / FAILED)']
  error_message text [null, note: '실패 시 에러 메시지']
  created_at timestamptz [not null, default: `now()`, note: '로그 생성 일시']

  indexes {
    (sync_type, status) [name: 'ix_data_sync_log_type_status', note: '유형+상태별 조회']
  }

  Note: '''
  데이터 동기화 이력 테이블
  - 공공 API 동기화 실행 결과 기록
  - 증분 업데이트 시 마지막 성공 시각 참조
  - 실패 시 에러 메시지 포함하여 디버깅 지원
  '''
}

// ============================================================
// CACHE - 외부 API 캐시
// ============================================================

Table drug_interaction_cache {
  id bigint [pk, increment, note: '캐시 레코드 ID (내부용)']
  drug_pair varchar(256) [not null, unique, note: '약품쌍 키 (정렬됨, 예: "아스피린::타이레놀")']
  interaction jsonb [not null, note: 'DUR 상호작용 분석 결과']
  expires_at timestamptz [not null, note: '캐시 만료 일시']
  created_at timestamptz [not null, default: `now()`, note: '캐시 생성 일시']

  indexes {
    drug_pair [unique, name: 'uq_drug_cache_pair', note: '약품쌍 중복 방지']
    expires_at [name: 'ix_drug_cache_expires', note: '만료 캐시 정리용']
  }

  Note: '''
  DUR 병용금기 캐시 테이블
  - 공공 API 호출 비용 절감
  - drug_pair: 두 약품명을 정렬하여 결합 (A::B 형식)
  - 동일 약품쌍 조회 시 캐시 히트
  '''
}

Table llm_response_cache {
  id bigint [pk, increment, note: '캐시 레코드 ID (내부용)']
  prompt_hash varchar(64) [not null, unique, note: '프롬프트 SHA-256 해시값']
  prompt_text text [not null, note: '원본 프롬프트 텍스트']
  response jsonb [not null, note: 'LLM 응답 데이터']
  hit_count int [not null, default: 0, note: '캐시 히트 횟수']
  expires_at timestamptz [not null, note: '캐시 만료 일시']
  created_at timestamptz [not null, default: `now()`, note: '캐시 생성 일시']

  indexes {
    prompt_hash [unique, name: 'uq_llm_cache_hash', note: '프롬프트 해시 중복 방지']
    expires_at [name: 'ix_llm_cache_expires', note: '만료 캐시 정리용']
  }

  Note: '''
  LLM 응답 캐시 테이블
  - 동일/유사 질문에 대한 토큰 비용 절감
  - 시맨틱 캐싱 기반 (프롬프트 해시)
  - hit_count로 캐시 효율 모니터링
  '''
}
